--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
+  open_file: ^3.5.10
   sizer:
+  intl: ^0.20.2
   # flutter_calendar_carousel:
 
 dev_dependencies:
